--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
+    "sass": "^1.85.1",
     "vite": "^6.0.11"
   },
   "scripts": {
