Navbar Design Completed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ESNext",
     "module": "ESNext",
     "jsx": "react-jsx",
-    "moduleResolution": "Node", // This helps resolving imports correctly
+    "moduleResolution": "node", // This helps resolving imports correctly
     "esModuleInterop": true, // This will enable default import for CommonJS
     "strict": true,
     "skipLibCheck": true, // This avoids unnecessary type checking in node_modules
